css/custom.css
/* Custom.css < Do your own thing! */

body {
    background: transparent;
}

.navbar {
    padding: 0.5rem 1rem 0.5rem 0rem;
}

/**
 * Typo
 **/
.semi-massive {
  font-size: 5rem;
  font-weight: 900;
  letter-spacing: -0.07em;
  line-height: 0.77;
  text-indent: -0.039em;
  margin-bottom: 0.25em;
}

/**
 * Slides
 **/
li.glide__slide div.bg div {
    width: 100%;
    height: 100vh;
}

li.glide__slide div.bg div img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

@media (max-width: 840px) {
    .dekstop, div.desktop {
        display: none;
    }
}

@media (min-width: 840px) {
    .mobile, div.mobile {
        display: none;
    }
}

/**
 * Artist
 **/
.artist .artist-photo {
    width: 360px;    
 }

 @media (max-width: 840px) {
    .artist-photo {
        width: 100%;    
     }
}

/**
 * Contact
 **/
 .contact .address {
    text-align: center;
 }

 .contact .address table {
    margin-left: auto;
    margin-right: auto;
 }

 .contact td:first-child {
    text-align: right;
 }
 .contact td:last-child {
    text-align: left;
 }

 .contact td {
    padding-left: 8px;
    padding-right: 8px;
 }

/**
 * Painting
 **/
.portfolio:first-child {
    padding-top: 1.5rem;
}

.portfolio:last-child {
    padding-bottom: 6rem;
}

.paiting-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.photo-container {
    max-width: 50%;
    display: block;
    position: relative;
}
.photo-container .photo {
    width: 100%;
}

.description-container {
    max-width: 50%;
    display: block;
    position: relative;
    padding-left: 2.5%;        
    padding-right: 2.5%;
}

.description-container > h1 {
    padding-top: 15rem;
    padding-bottom: 0rem;
}

@media (max-width: 840px) {
    .portfolio:first-child {
        padding-top: 1.5rem;
    }

    .portfolio:last-child {
        padding-bottom: 0rem;
    }    

    .photo-container {
        max-width: 100%;
    }
    .description-container {
        max-width: 100%;
        padding-left: 5%;        
        padding-right: 5%;
    }

    .description-container:after {
        content: ". . .";
        width: 100%;
        text-align: center;
        display: block;
        padding-top: 3rem;
        padding-bottom: 3rem;
    }

    .description-container > h1 {
        padding-top: 1rem;
        padding-bottom: 1rem;
        margin-bottom: 0.5rem;
    }
}

/**
 * Grids
 **/
.grid .grid-item:after {
    content: "";
    display: block;
    padding-bottom: 100%;
}

.grid .grid-item img {
    background: #ffffff;
    transition: opacity 0.3s;
    display: block;
    position: absolute;
    /* Take your picture out of the flow */
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    /* Make the picture taking the size of it's parent */
    width: 100%;
    /* This if for the object-fit */
    height: 100%;
    /* This if for the object-fit */
    object-fit: contain;
    /* Equivalent of the background-size: cover; of a background-image */
    object-position: center;
}

@media screen and (max-width: 1024px) {
    .navbar {
        padding: 1rem 2rem 1rem 1.5rem;
    }
}

@media screen and (max-width: 768px) {
    .navbar {
        padding-left: 1rem !important;
        padding-right: 1rem !important;
    }
}

